<resources>
    <string name="app_name">Tactoetic</string>
    <string name="app_name_extended">Tactoetic - a stylish Tic Tac Toe</string>

    <!-- Game management -->
    <string name="new_game">New game</string>
    <string name="result_placeholder">The first player can start!</string>
    <string name="player_one_turn">Player one turn</string>
    <string name="player_two_turn">Player two turn</string>
    <string name="player_one_wins">Player one wins!</string>
    <string name="player_two_wins">Player two wins!</string>
    <string name="draw">Draw!</string>

    <!-- Settings -->
    <string name="app_behavior">App behavior</string>
    <string name="customization">Customization</string>
    <string name="grid_size_name">Grid size</string>
    <string name="vibration_name">Vibration</string>
    <string name="vibration_description_on">Vibrate when a button is pressed</string>
    <string name="vibration_description_off">No vibrations when a button is pressed</string>
    <string name="settings">Settings</string>
    <string name="grid_dimension">Grid dimension</string>
    <string name="three_by_three">Three by three</string>
    <string name="four_by_four">Four by four</string>
    <string name="five_by_five">Five by five</string>
    <string name="six_by_six">Six by six</string>
    <string name="accent_description">Change the default accent color</string>
    <string name="accent_name">Accent color</string>
    <string name="theme_description">Use a dark, light or automatic app theme</string>
    <string name="theme_name">App theme</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="teal">Teal</string>
    <string name="violet">Violet</string>
    <string name="pink">Pink</string>
    <string name="light_blue">Light blue</string>
    <string name="red">Red</string>
    <string name="lime">Lime</string>
    <string name="system_theme">System default</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>

    <!-- Developer -->
    <string name="dev_name" translatable="false">m.i.n.a.r.</string>
    <string name="dev_description">I\'m a polite guy and i like beautiful things, like animations, icons, sport cars and 3d printing. I work as designer and computer engineer.</string>
    <string name="dev_email" translatable="false">minar.tastic@gmail.com</string>
    <string name="dev_personal_site" translatable="false">https://minar.ml</string>
    <string name="dev_instagram" translatable="false">https://www.instagram.com/minar.tastic/</string>
    <string name="dev_paypal" translatable="false">https://www.paypal.me/minardev</string>
    <string name="dev_xda" translatable="false">https://forum.xda-developers.com/member.php?u=5222216</string>
    <string name="dev_github" translatable="false">https://github.com/m-i-n-a-r</string>
    <string name="dev_other_apps" translatable="false">https://play.google.com/store/apps/dev?id=7720251761301594831</string>
    <string name="easter_egg">Nice logo, huh? ;D</string>

</resources>
