<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTtt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:maxLines="1"
            android:textColor="@color/goodGray"
            android:text="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <RelativeLayout
            android:id="@+id/tttSection"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_margin="@dimen/linear_vertical_margin"
            app:layout_constraintHeight_percent="0.5"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTtt"/>

        <TextView
            android:id="@+id/resultGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/result_text_margin"
            android:layout_marginBottom="@dimen/result_text_margin"
            android:singleLine="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tttSection"
            app:layout_constraintBottom_toTopOf="@id/newGameBtn"
            android:text="@string/result_placeholder"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textStyle="bold" />

        <Button
            android:id="@+id/newGameBtn"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:textColor="?android:colorBackground"
            android:tint="?colorAccent"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/new_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/settingsBtn"
            app:layout_constraintTop_toBottomOf="@id/tttSection"
            style="@style/Widget.MaterialComponents.Button"
            app:rippleColor="?colorAccent" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="?colorAccent"
            android:tint="?colorAccent"
            android:contentDescription="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newGameBtn"
            app:icon="@drawable/ic_settings_24dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            app:rippleColor="?colorAccent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>